--- a/Store/Template_view/Basket/BasketRow.xaml
+++ b/Store/Template_view/Basket/BasketRow.xaml
@@ -9,7 +9,7 @@
     <UserControl.Resources>
         <ResourceDictionary Source="..\..\Style.xaml"/>
     </UserControl.Resources>
-    <Grid>
+    <Grid Background="Gray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="10*"/>
@@ -23,24 +23,27 @@
             Grid.Column="0"
             Style="{StaticResource ResourceKey=Style_Border}">
             <Label
-                Content="1"
+                x:Name="Label_RowNumber"
+                Content="#"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center"/>
+                Style="{StaticResource Style_RowTable}"/>
         </Border>
         <Border
             Grid.Column="1"
             Style="{StaticResource ResourceKey=Style_Border}">
             <Label
+                x:Name="Label_ProductName"
                 Content="Продукт"
-                VerticalAlignment="Center"/>
+                Style="{StaticResource Style_RowTable}"/>
         </Border>
         <Border
             Grid.Column="2"
             Style="{StaticResource ResourceKey=Style_Border}">
-             <Label
+            <Label
+                x:Name="Label_ProductCounter"
                 Content="0"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center"/>
+                Style="{StaticResource Style_RowTable}"/>
         </Border>
         <Border
             Grid.Column="3"
@@ -53,26 +56,48 @@
                     Content="+"
                     DockPanel.Dock="Right"/>
                 <TextBox
+                    x:Name="TextBox_RowAmount"
                     Text="0"
                     HorizontalContentAlignment="Center"
-                    VerticalContentAlignment="Center"/>
+                    VerticalContentAlignment="Center"
+                    Margin="0,5,0,5"/>
             </DockPanel>
         </Border>
         <Border
             Grid.Column="4"
             Style="{StaticResource ResourceKey=Style_Border}">
-            <Label
-                Content="0.00 р."
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"/>
+            <StackPanel
+                Orientation="Horizontal"
+                HorizontalAlignment="Center">
+                <Label
+                    x:Name="Label_ProductPrice"
+                    Content="0.00"
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource Style_RowTable}"/>
+                <Label
+                    x:Name="Label_PriceCurrency"
+                    Content=" р."
+                    HorizontalAlignment="Center"
+                    Style="{StaticResource Style_RowTable}"/>
+            </StackPanel>
         </Border>
         <Border
             Grid.Column="5"
             Style="{StaticResource ResourceKey=Style_Border}">
-            <Label
-                Content="0.00 р."
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"/>
+            <StackPanel 
+                Orientation="Horizontal"
+                HorizontalAlignment="Center">
+                <Label
+                    x:Name="Label_RowCost"
+                    Content="0.00"
+                    HorizontalAlignment="Center"
+                   Style="{StaticResource Style_RowTable}"/>
+                <Label
+                    x:Name="Label_CostCurrency"
+                    Content=" р."
+                    HorizontalAlignment="Center"
+                   Style="{StaticResource Style_RowTable}"/>
+            </StackPanel>
         </Border>
         <Border
             Grid.Column="6"
